Add localization support for English, German, and French languages, update default localization to English, and implement a new Localization struct for managing translations. Remove deprecated LocalizationHelper.swift file.

--- a/AudioCascade/Resources/Info.plist
+++ b/AudioCascade/Resources/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleDevelopmentRegion</key>
-    <string>$(DEVELOPMENT_LANGUAGE)</string>
+    <string>en</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIconFile</key>
@@ -34,5 +34,11 @@
     <false/>
     <key>NSSupportsSuddenTermination</key>
     <false/>
+    <key>CFBundleLocalizations</key>
+    <array>
+        <string>en</string>
+        <string>de</string>
+        <string>fr</string>
+    </array>
 </dict>
 </plist>
