--- a/AudioCascade/Resources/Info.plist
+++ b/AudioCascade/Resources/Info.plist
@@ -3,19 +3,19 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleDevelopmentRegion</key>
-    <string>en</string>
+    <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIconFile</key>
     <string>AppIcon</string>
     <key>CFBundleIdentifier</key>
-    <string>com.audiocascade.app</string>
+    <string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
-    <string>AudioCascade</string>
+    <string>$(PRODUCT_NAME)</string>
     <key>CFBundlePackageType</key>
-    <string>APPL</string>
+    <string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
     <key>CFBundleShortVersionString</key>
     <string>1.0.0</string>
     <key>CFBundleVersion</key>
@@ -25,7 +25,7 @@
     <key>LSUIElement</key>
     <true/>
     <key>NSHumanReadableCopyright</key>
-    <string>Copyright © 2024 AudioCascade. All rights reserved.</string>
+    <string>Copyright © 2025 Niclas Kahlmeier. All rights reserved.</string>
     <key>NSMainStoryboardFile</key>
     <string>Main</string>
     <key>NSPrincipalClass</key>
@@ -34,6 +34,12 @@
     <false/>
     <key>NSSupportsSuddenTermination</key>
     <false/>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
+    <key>LSApplicationCategoryType</key>
+    <string>public.app-category.utilities</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>AudioCascade needs access to audio devices to manage and switch between them.</string>
     <key>CFBundleLocalizations</key>
     <array>
         <string>en</string>
