Add keyboard shortcut functionality for audio devices. Implement ShortcutRecorderView for setting and editing shortcuts, and update DeviceRowView to display shortcuts. Enhance AudioDeviceManager to handle global keyboard events for device switching via shortcuts. Update localization for shortcut-related strings.

--- a/AudioCascade/Resources/Info.plist
+++ b/AudioCascade/Resources/Info.plist
@@ -40,6 +40,8 @@
     <string>public.app-category.utilities</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>AudioCascade needs access to audio devices to manage and switch between them.</string>
+    <key>NSUserNotificationAlertStyle</key>
+    <string>alert</string>
     <key>CFBundleLocalizations</key>
     <array>
         <string>en</string>
