Enhance AudioDeviceManager to support manual device switching and improve device selection logic. Add NSAppleEventsUsageDescription to Info.plist for accessibility access. Update DeviceRowView to reflect manual switching in context menu.

--- a/AudioCascade/Resources/Info.plist
+++ b/AudioCascade/Resources/Info.plist
@@ -42,6 +42,8 @@
     <string>AudioCascade needs access to audio devices to manage and switch between them.</string>
     <key>NSUserNotificationAlertStyle</key>
     <string>alert</string>
+    <key>NSAppleEventsUsageDescription</key>
+    <string>AudioCascade needs accessibility access to monitor keyboard shortcuts globally.</string>
     <key>CFBundleLocalizations</key>
     <array>
         <string>en</string>
